sorted item added

--- a/public/AllAppData.json
+++ b/public/AllAppData.json
@@ -4,7 +4,7 @@
     "title": "PhotoMaster",
     "companyName": "PixelSoft",
     "id": 1,
-    "description": "An advanced photo editing tool with AI filters and one-click retouch.",
+    "description": "PhotoMaster is a comprehensive photo editing application that allows users to enhance, retouch, and transform images with ease. Featuring a wide range of AI-powered filters, one-click effects, and advanced editing tools, it empowers both beginners and professionals to create stunning visuals. Users can adjust brightness, contrast, saturation, and apply creative overlays to bring their imagination to life. With a user-friendly interface, seamless export options, and support for multiple formats, PhotoMaster makes professional-quality photo editing accessible to everyone. Whether you want to polish your selfies, create artistic compositions, or design promotional images, this app provides all the tools you need in one place.",
     "size": 45,
     "reviews": 1250,
     "ratingAvg": 4.5,
@@ -22,7 +22,7 @@
     "title": "TaskFlow",
     "companyName": "NextGen Apps",
     "id": 2,
-    "description": "Boost your productivity with smart task automation and reminders.",
+    "description": "TaskFlow is a smart productivity app designed to streamline task management and enhance workflow efficiency. With intuitive task creation, automated reminders, and customizable schedules, users can prioritize their responsibilities effectively. The app supports collaborative projects, enabling teams to share updates and track progress in real-time. Advanced analytics help identify bottlenecks and optimize performance, while smart notifications ensure deadlines are never missed. TaskFlow also offers integrations with calendars, emails, and cloud storage, making it a central hub for organizing daily tasks. Whether for personal planning or professional project management, TaskFlow helps users stay organized, focused, and productive.",
     "size": 30,
     "reviews": 870,
     "ratingAvg": 4.2,
@@ -40,7 +40,7 @@
     "title": "MusicBee",
     "companyName": "Harmony Studio",
     "id": 3,
-    "description": "Listen, organize, and discover music with built-in equalizer and themes.",
+    "description": "MusicBee is a dynamic music player and organizer designed for music lovers of all kinds. It offers users the ability to listen, discover, and curate personalized playlists effortlessly. The app features a built-in equalizer, advanced sorting options, and themed layouts to enhance the listening experience. Users can explore new tracks, create playlists, and manage libraries seamlessly. Offline playback ensures uninterrupted enjoyment, while the recommendation engine suggests songs tailored to your preferences. With MusicBee, music enthusiasts can enjoy a fully immersive, interactive experience that blends convenience, organization, and entertainment into a single, powerful platform for all music-related activities.",
     "size": 65,
     "reviews": 2100,
     "ratingAvg": 4.8,
@@ -58,7 +58,7 @@
     "title": "NotePro",
     "companyName": "SkyLabs",
     "id": 4,
-    "description": "A clean and fast note-taking app with cloud sync and markdown support.",
+    "description": "NotePro is a fast, intuitive note-taking app designed to keep your thoughts organized and accessible. It supports cloud synchronization, markdown formatting, and multi-device access, making it ideal for students, professionals, and creatives. Users can quickly capture ideas, create to-do lists, and organize notes with folders and tags. The app also offers search functionality, customizable themes, and offline access to ensure productivity even without an internet connection. With NotePro, you can streamline your note-taking process, collaborate with team members, and maintain a structured workflow, all within a simple, user-friendly interface that prioritizes speed and efficiency.",
     "size": 25,
     "reviews": 530,
     "ratingAvg": 4.0,
@@ -76,7 +76,7 @@
     "title": "GameBoost",
     "companyName": "EliteWare",
     "id": 5,
-    "description": "Optimize your device for smoother gaming performance instantly.",
+    "description": "GameBoost is a performance optimization app built for gamers who want smooth, lag-free gameplay. It intelligently frees up memory, closes background processes, and adjusts device settings to maximize frame rates. Users can monitor CPU and GPU usage, track battery consumption, and optimize storage for gaming sessions. With GameBoost, every game launches faster and runs more efficiently, reducing interruptions and enhancing responsiveness. The app also offers one-click performance modes, customizable profiles for different games, and detailed analytics, helping users enjoy an uninterrupted gaming experience while ensuring their device stays in top condition.",
     "size": 55,
     "reviews": 1500,
     "ratingAvg": 4.6,
@@ -94,7 +94,7 @@
     "title": "FitTrack",
     "companyName": "Healthify",
     "id": 6,
-    "description": "Track your workouts, calories, and progress with AI-based analytics.",
+    "description": "FitTrack is a comprehensive fitness tracking app that helps users monitor workouts, calories, and overall health progress. The app uses AI-powered analytics to provide personalized insights, track goals, and suggest optimized routines. Users can log exercises, track heart rate, sleep, and nutrition, and set reminders for workouts. With detailed reports, progress charts, and motivational notifications, FitTrack encourages consistent performance and healthy habits. The app also supports syncing with wearable devices, making it easier to maintain a holistic view of fitness progress and improve long-term health effectively.",
     "size": 40,
     "reviews": 980,
     "ratingAvg": 4.3,
@@ -112,7 +112,7 @@
     "title": "TravelMate",
     "companyName": "WanderWorld",
     "id": 7,
-    "description": "Plan your trips easily with budget tracking and smart itinerary builder.",
+    "description": "TravelMate is a travel planning app that simplifies trip organization for both leisure and business travelers. Users can create itineraries, track budgets, and discover attractions with personalized recommendations. The app supports collaborative planning, allowing friends or family to share travel schedules, notes, and updates. Offline maps, expense tracking, and smart reminders ensure smooth travel experiences, while AI suggestions help optimize routes and save time. With TravelMate, planning a trip becomes efficient, enjoyable, and stress-free, empowering travelers to focus on experiences rather than logistics.",
     "size": 60,
     "reviews": 1750,
     "ratingAvg": 4.7,
@@ -130,7 +130,7 @@
     "title": "LearnHub",
     "companyName": "EduVerse",
     "id": 8,
-    "description": "Learn new skills online with interactive courses and real projects.",
+    "description": "LearnHub is an online learning platform offering interactive courses, real-world projects, and expert guidance. Users can explore diverse topics, practice skills through hands-on exercises, and receive certificates upon completion. The app supports self-paced learning with personalized recommendations, progress tracking, and community engagement. With video lessons, quizzes, and collaborative projects, LearnHub fosters an immersive learning environment. It also integrates with other educational tools and resources, making it easy for students and professionals to upskill effectively. LearnHub is designed to make acquiring knowledge accessible, engaging, and impactful for lifelong learners.",
     "size": 50,
     "reviews": 2600,
     "ratingAvg": 4.9,
@@ -149,7 +149,7 @@
     "title": "FLIP - Focus Timer for Study",
     "companyName": "Focus Labs",
     "id": 9,
-    "description": "Pomodoro timer to improve study focus and productivity.",
+    "description": "FLIP is a Pomodoro-style focus timer designed to improve study efficiency and productivity. It allows students and professionals to break work into manageable intervals with short breaks in between, reducing fatigue and increasing focus. The app tracks session history, total focused time, and provides insightful analytics to optimize study patterns. Users can customize work and break durations, set reminders, and enjoy gentle notifications to maintain concentration. FLIP also offers motivational quotes and a clean, distraction-free interface to encourage consistent study habits. By fostering time management and mental discipline, it helps users maximize learning potential and stay on track with goals.",
     "size": 28,
     "reviews": 900,
     "ratingAvg": 4.6,
@@ -167,7 +167,7 @@
     "title": "QuickScan",
     "companyName": "ScanTech",
     "id": 10,
-    "description": "Scan documents fast with OCR and cloud upload support.",
+    "description": "QuickScan is a versatile document scanning app that converts physical papers into digital files quickly and efficiently. Equipped with OCR technology, it allows users to extract text from images, annotate, and share documents seamlessly. QuickScan supports multiple file formats, batch scanning, and cloud synchronization, ensuring that important documents are always accessible. Users can enhance scans by adjusting brightness, contrast, and perspective. The app is ideal for students, professionals, and businesses, providing a reliable tool for digitizing receipts, notes, contracts, and books. QuickScan saves time, reduces clutter, and promotes a paperless workflow with convenience and precision.",
     "size": 33,
     "reviews": 780,
     "ratingAvg": 4.4,
@@ -185,7 +185,7 @@
     "title": "MindMapPro",
     "companyName": "BrainTech",
     "id": 11,
-    "description": "Create interactive mind maps for study and project planning.",
+    "description": "MindMapPro helps users visually organize thoughts, ideas, and projects using interactive mind maps. It supports hierarchical structuring, color-coding, and rich media integration, making complex concepts easier to understand. Users can brainstorm, plan projects, and track task progress within a clear, visual layout. The app allows collaborative editing, sharing, and exporting in multiple formats. With MindMapPro, students, educators, and professionals can enhance learning, improve creativity, and plan strategies effectively. Its intuitive interface ensures that mapping ideas becomes engaging and productive, making it a valuable tool for creative thinking and structured organization.",
     "size": 40,
     "reviews": 600,
     "ratingAvg": 4.5,
@@ -203,7 +203,7 @@
     "title": "RecipeMaster",
     "companyName": "FoodieApps",
     "id": 12,
-    "description": "Discover, save and share recipes with step-by-step guides.",
+    "description": "RecipeMaster is a culinary companion that allows users to discover, save, and share recipes with ease. The app provides step-by-step instructions, ingredient lists, and cooking tips for dishes from around the world. Users can create personalized cookbooks, plan weekly meals, and track nutritional information. RecipeMaster supports photo uploads, reviews, and ratings to foster a community of cooking enthusiasts. Its search and filtering options help find recipes for dietary preferences or available ingredients. Ideal for home cooks and food lovers, RecipeMaster makes cooking more organized, enjoyable, and creative, while inspiring new culinary adventures.",
     "size": 38,
     "reviews": 950,
     "ratingAvg": 4.7,
@@ -221,7 +221,7 @@
     "title": "BudgetTrack",
     "companyName": "FinanceHub",
     "id": 13,
-    "description": "Manage your expenses and savings with smart charts and alerts.",
+    "description": "BudgetTrack is a personal finance app that helps users manage expenses, savings, and budgets efficiently. It offers features like expense categorization, real-time tracking, goal setting, and alert notifications for overspending. Users can visualize spending patterns through interactive charts and reports. BudgetTrack supports multiple accounts, recurring transactions, and cloud backups, ensuring financial data is secure and accessible. Ideal for individuals and families, it promotes better financial habits, encourages savings, and assists in long-term planning. By providing actionable insights and a clear overview of finances, BudgetTrack helps users stay on top of their money management goals effectively.",
     "size": 35,
     "reviews": 620,
     "ratingAvg": 4.3,
@@ -239,7 +239,7 @@
     "title": "WeatherNow",
     "companyName": "SkyView",
     "id": 14,
-    "description": "Real-time weather updates with radar and alerts.",
+    "description": "WeatherNow provides accurate, real-time weather updates with radar maps, forecasts, and alerts. Users can monitor temperature, precipitation, wind, and severe weather conditions locally or globally. The app includes hourly, daily, and weekly forecasts, customizable notifications, and an interactive radar for tracking storms. WeatherNow also offers lifestyle insights such as UV index, pollen counts, and humidity levels. Its intuitive interface makes accessing weather information quick and convenient. Ideal for commuters, travelers, and outdoor enthusiasts, WeatherNow ensures users stay informed, prepared, and safe in changing weather conditions.",
     "size": 25,
     "reviews": 500,
     "ratingAvg": 4.2,
@@ -257,7 +257,7 @@
     "title": "LangLearner",
     "companyName": "EduWorld",
     "id": 15,
-    "description": "Learn new languages interactively with exercises and quizzes.",
+    "description": "LangLearner is an interactive language learning app that helps users acquire new languages efficiently. It provides lessons, exercises, quizzes, and conversational practice tailored to different skill levels. The app tracks progress, reinforces vocabulary through repetition, and uses speech recognition to improve pronunciation. Gamification elements, such as points, badges, and challenges, motivate users to maintain regular practice. LangLearner also offers cultural insights and contextual learning for real-world usage. Suitable for students, travelers, and language enthusiasts, it makes learning a new language engaging, structured, and effective, enhancing both communication skills and confidence.",
     "size": 40,
     "reviews": 800,
     "ratingAvg": 4.5,
@@ -275,7 +275,7 @@
     "title": "MindFitness",
     "companyName": "Healthify",
     "id": 16,
-    "description": "Brain training exercises to improve memory and focus.",
+    "description": "MindFitness is an app designed to enhance cognitive abilities, memory, and focus through brain training exercises. Users can participate in daily challenges, memory games, and problem-solving activities that adapt to skill levels. The app tracks progress, provides insights, and encourages consistent practice to improve mental agility. MindFitness offers a variety of exercises targeting attention, reasoning, and creativity, helping users maintain sharpness in daily life. Suitable for students, professionals, and seniors, it makes brain training fun, interactive, and measurable. By integrating short sessions into routines, MindFitness promotes long-term mental wellness and cognitive growth.",
     "size": 45,
     "reviews": 700,
     "ratingAvg": 4.4,
@@ -293,7 +293,7 @@
     "title": "PhotoCollage",
     "companyName": "PixelSoft",
     "id": 17,
-    "description": "Create stunning photo collages with easy templates.",
+    "description": "PhotoCollage is a creative app that allows users to design beautiful photo collages effortlessly. With customizable templates, drag-and-drop functionality, stickers, and text overlays, it provides a fun way to merge multiple photos into artistic compositions. Users can apply filters, adjust layouts, and share creations directly to social media. The app supports high-resolution exports and maintains image quality, making it ideal for personal, educational, or marketing purposes. PhotoCollage is designed to be user-friendly while offering powerful features that inspire creativity, enabling users to create memorable visual stories from everyday images.",
     "size": 50,
     "reviews": 650,
     "ratingAvg": 4.3,
@@ -311,7 +311,7 @@
     "title": "SleepWell",
     "companyName": "HealthTech",
     "id": 18,
-    "description": "Track sleep patterns and improve rest quality with smart analytics.",
+    "description": "SleepWell is a sleep tracking and improvement app that monitors sleep patterns and provides actionable insights to enhance rest quality. It tracks duration, sleep stages, and disturbances while offering personalized recommendations, relaxing sounds, and bedtime reminders. Users can set goals, review trends over time, and optimize sleep hygiene for better energy and productivity. SleepWell integrates with wearable devices to provide accurate data and tracks lifestyle factors affecting sleep. Suitable for anyone seeking better rest, it combines science-based guidance with user-friendly tools, helping users develop healthy sleep routines and improve overall well-being.",
     "size": 30,
     "reviews": 720,
     "ratingAvg": 4.2,
@@ -329,7 +329,7 @@
     "title": "QuickNotes",
     "companyName": "NoteWorld",
     "id": 19,
-    "description": "Fast note-taking app with cloud sync and reminders.",
+    "description": "QuickNotes is a streamlined note-taking app that allows users to capture ideas and reminders quickly. With cloud sync, users can access notes across multiple devices, organize them with tags, and set alerts for important tasks. The app offers a minimalist interface, supports multimedia attachments, and provides search functionality for easy retrieval. QuickNotes is ideal for students, professionals, and anyone looking to organize daily thoughts efficiently. Its simple yet powerful features ensure productivity while maintaining a clutter-free environment, making note management fast, reliable, and convenient.",
     "size": 25,
     "reviews": 640,
     "ratingAvg": 4.3,
@@ -347,7 +347,7 @@
     "title": "HealthMate",
     "companyName": "FitLife",
     "id": 20,
-    "description": "Monitor your health metrics and daily activity efficiently.",
+    "description": "HealthMate is a comprehensive health monitoring app that helps users track daily activity, vital metrics, and overall wellness. It records steps, heart rate, sleep, and calorie consumption while providing personalized insights to improve health habits. Users can set fitness goals, schedule reminders, and view progress with detailed analytics and charts. HealthMate integrates with wearable devices to ensure accurate data collection and offers tips to maintain a balanced lifestyle. Designed for users of all ages, the app empowers individuals to take control of their health, encouraging consistent monitoring and informed lifestyle decisions for better well-being.",
     "size": 35,
     "reviews": 580,
     "ratingAvg": 4.4,
