json file apdated

--- a/public/appData.json
+++ b/public/appData.json
@@ -1,6 +1,6 @@
 [
   {
-    "image": "/src/assets/demo-app (1).webp",
+    "image": "../demo-app (1).webp",
     "title": "PhotoMaster",
     "companyName": "PixelSoft",
     "id": 1,
@@ -18,7 +18,7 @@
     ]
   },
   {
-    "image": "/src/assets/demo-app (2).webp",
+    "image": "../demo-app (2).webp",
     "title": "TaskFlow",
     "companyName": "NextGen Apps",
     "id": 2,
@@ -36,7 +36,7 @@
     ]
   },
   {
-    "image": "/src/assets/demo-app (3).webp",
+    "image": "../demo-app (3).webp",
     "title": "MusicBee",
     "companyName": "Harmony Studio",
     "id": 3,
@@ -54,7 +54,7 @@
     ]
   },
   {
-    "image": "/src/assets/demo-app (4).webp",
+    "image": "../demo-app (4).webp",
     "title": "NotePro",
     "companyName": "SkyLabs",
     "id": 4,
@@ -72,7 +72,7 @@
     ]
   },
   {
-    "image": "/src/assets/demo-app (5).webp",
+    "image": "../demo-app (5).webp",
     "title": "GameBoost",
     "companyName": "EliteWare",
     "id": 5,
