json file apdated

--- a/public/appData.json
+++ b/public/appData.json
@@ -90,7 +90,7 @@
     ]
   },
   {
-    "image": "/src/assets/demo-app (6).webp",
+    "image": "../demo-app (6).webp",
     "title": "FitTrack",
     "companyName": "Healthify",
     "id": 6,
